crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_f_string_concat_4.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..31,
            value: FString(
                ExprFString {
                    range: 0..31,
                    implicit_concatenated: true,
                    parts: [
                        Literal(
                            PartialString {
                                range: 1..16,
                                value: "Hello world",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                range: 16..21,
                                expression: Constant(
                                    ExprConstant {
                                        range: 17..20,
                                        value: Str(
                                            StringConstant {
                                                value: "!",
                                                implicit_concatenated: false,
                                            },
                                        ),
                                        kind: None,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: [],
                            },
                        ),
                        Literal(
                            PartialString {
                                range: 24..30,
                                value: "again!",
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
