crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_equals.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
FString(
    ExprFString {
        range: 2..12,
        implicit_concatenated: false,
        parts: [
            FormattedValue(
                FormattedValue {
                    range: 2..12,
                    expression: Compare(
                        ExprCompare {
                            range: 3..11,
                            left: Constant(
                                ExprConstant {
                                    range: 3..5,
                                    value: Int(
                                        42,
                                    ),
                                    kind: None,
                                },
                            ),
                            ops: [
                                Eq,
                            ],
                            comparators: [
                                Constant(
                                    ExprConstant {
                                        range: 9..11,
                                        value: Int(
                                            42,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    debug_text: None,
                    conversion: None,
                    format_spec: None,
                },
            ),
        ],
    },
)
