crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_concatenation_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
FString(
    ExprFString {
        range: 2..15,
        implicit_concatenated: false,
        parts: [
            FormattedValue(
                FormattedValue {
                    range: 2..15,
                    expression: Name(
                        ExprName {
                            range: 3..6,
                            id: "foo",
                            ctx: Load,
                        },
                    ),
                    debug_text: None,
                    conversion: None,
                    format_spec: [
                        FormattedValue(
                            FormattedValue {
                                range: 7..14,
                                expression: Constant(
                                    ExprConstant {
                                        range: 8..13,
                                        value: Str(
                                            StringConstant {
                                                value: "",
                                                implicit_concatenated: true,
                                            },
                                        ),
                                        kind: None,
                                    },
                                ),
                                debug_text: None,
                                conversion: None,
                                format_spec: [],
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
